--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -3,6 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="48dp"
     android:background="@color/bar_color">
+    <ImageView
+        android:id="@+id/back_img"
+        android:onClick="onBeBack"
+        android:src="@mipmap/icon_be_back_white"
+        android:scaleType="centerInside"
+        android:padding="8dp"
+        android:visibility="gone"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
