--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:background="@color/bar_color">
+    android:layout_height="wrap_content"
+    android:paddingTop="25dp"
+    android:paddingBottom="10dp"
+    android:background="@mipmap/ic_launcher">
     <ImageView
         android:id="@+id/back_img"
         android:onClick="onBeBack"
@@ -10,7 +12,6 @@
         android:scaleType="centerInside"
         android:padding="8dp"
         android:visibility="gone"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
@@ -19,6 +20,6 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textSize="20sp"
-        android:textColor="@color/white"
-        android:layout_centerInParent="true"  />
+        android:textColor="@color/black"
+        android:layout_centerHorizontal="true"  />
 </RelativeLayout>
