--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="txt_color">#3C3C3C</color>
     <color name="gray">#FFF0F0F0</color>
     <color name="gray_deep">#c9000000</color>
+    <color name="red_bg">#DE252B</color>
 </resources>
