--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,5 +5,6 @@
         <attr name="et_inputType" format="integer"/>
         <attr name="et_hint" format="string"/>
         <attr name="et_text" format="string"/>
+        <attr name="et_lines" format="integer"/>
     </declare-styleable>
 </resources>
