--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -21,5 +21,6 @@
         android:layout_centerInParent="true"
         android:padding="10dp"
         android:text="@string/app_name"
-        android:textColor="@color/gray_deep" />
+        android:textColor="@color/gray_deep"
+        android:textSize="12sp" />
 </RelativeLayout>
