--- a/app/src/main/res/layout/activity_make_money.xml
+++ b/app/src/main/res/layout/activity_make_money.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:text="@string/make_money_tips"
+        android:textSize="12sp"
         android:textColor="@color/red_bg" />
 
     <android.support.v7.widget.RecyclerView
