--- a/app/src/main/res/layout/acvity_put_in.xml
+++ b/app/src/main/res/layout/acvity_put_in.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <include layout="@layout/layout_title" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,23 +13,24 @@
         android:layout_marginTop="10dp"
         android:text="@string/name"
         android:textColor="@color/txt_black"
-        android:textStyle="bold" />
+        android:textSize="12sp" />
+
     <EditText
         android:id="@+id/name_edit"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="12sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
         android:hint="@string/name_hint"
         android:lines="1"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="5dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:textSize="12sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,61 +38,64 @@
         android:layout_marginStart="15dp"
         android:text="@string/phone"
         android:textColor="@color/txt_black"
-        android:textStyle="bold" />
+        android:textSize="12sp" />
+
     <EditText
         android:id="@+id/phone_edit"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="12sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
         android:hint="@string/phone_hint"
         android:lines="1"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="5dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:textSize="12sp" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:text="@string/guanggaoneirong"
             android:textColor="@color/txt_black"
-            android:textStyle="bold" />
+            android:textSize="12sp" />
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:text="@string/text_lenth_500"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textSize="12sp" />
     </LinearLayout>
-
 
 
     <EditText
         android:id="@+id/guanggao_edit"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="12sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
+        android:gravity="top|left"
         android:hint="@string/guanggaoneirong_hint"
         android:lines="3"
-        android:gravity="top|left"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="5dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:textSize="12sp" />
 
     <include layout="@layout/button_layout" />
 </LinearLayout>
