--- a/app/src/main/res/layout/open_member.xml
+++ b/app/src/main/res/layout/open_member.xml
@@ -74,61 +74,7 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/choice_zhifu_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/xuanzezhifub"
-        android:textColor="@color/txt_black"
-        android:textStyle="bold" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
-            android:drawableStart="@mipmap/home_select"
-            android:gravity="center_vertical"
-            android:text="@string/zhifubao"
-            android:textColor="@color/txt_black" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/home_unselect" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
-            android:drawableStart="@mipmap/home_select"
-            android:gravity="center_vertical"
-            android:text="@string/weixin"
-            android:textColor="@color/txt_black" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/home_unselect" />
-    </RelativeLayout>
+    <include layout="@layout/pay_change_layout"/>
 
     <include layout="@layout/button_layout" />
 </LinearLayout>
