--- a/app/src/main/res/layout/button_layout.xml
+++ b/app/src/main/res/layout/button_layout.xml
@@ -2,19 +2,19 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/commit_tv"
-    tools:text="@string/lijizhuanyong"
-    android:textStyle="bold"
-    android:textSize="14sp"
-    android:textColor="@color/white"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
-    android:gravity="center"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:elevation="3dp"
-    android:background="@drawable/commit_shape"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="15dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginTop="20dp"
+    android:background="@drawable/commit_shape"
+    android:elevation="3dp"
+    android:gravity="center"
+    android:paddingBottom="5dp"
+    android:paddingEnd="10dp"
+    android:paddingStart="10dp"
+    android:paddingTop="5dp"
+    android:textColor="@color/white"
+    android:textSize="13sp"
+    android:textStyle="bold"
+    tools:text="@string/lijizhuanyong" />
