微帮帮布局搭建

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="gray">#FFF0F0F0</color>
     <color name="gray_deep">#c9000000</color>
     <color name="red_bg">#DE252B</color>
+    <color name="purple">#A889D3</color>
 </resources>
