--- a/app/src/main/res/layout/activity_free_lead.xml
+++ b/app/src/main/res/layout/activity_free_lead.xml
@@ -6,10 +6,10 @@
 
     <include layout="@layout/layout_title" />
 
-    <ImageView
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/red_bg" />
+        android:layout_height="150dp" />
 
     <TextView
         android:layout_width="wrap_content"
