微帮帮布局搭建

--- a/app/src/main/res/layout/activity_make_money.xml
+++ b/app/src/main/res/layout/activity_make_money.xml
@@ -14,13 +14,14 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:text="@string/make_money_tips"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:textColor="@color/red_bg" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         tools:listitem="@layout/make_money_item"
         tools:itemCount="5"
+        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
