--- a/app/src/main/res/drawable/edit_shape.xml
+++ b/app/src/main/res/drawable/edit_shape.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <corners android:radius="3dp"/>
-    <stroke android:width="1dp" android:color="#CACACA"/>
+    <stroke android:width="1dp" android:color="#F3F3F3"/>
+    <solid android:color="@color/white"/>
 </shape>
