--- a/app/src/main/res/layout/activity_free_lead.xml
+++ b/app/src/main/res/layout/activity_free_lead.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/layout_title" />
@@ -12,13 +13,11 @@
         android:layout_height="150dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="10dp"
-        android:textSize="12sp"
-        android:text="@string/free_lead_tips"
-        android:textColor="@color/txt_black" />
+        android:gravity="center_horizontal"
+        android:text="@string/free_lead_tips" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,73 +25,75 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:text="@string/name"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black" />
+        android:textSize="12sp" />
 
     <EditText
         android:id="@+id/name_edit"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="12sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
+        android:elevation="3dp"
         android:hint="@string/name_hint"
         android:lines="1"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:text="@string/phone"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black"/>
+        android:textSize="12sp" />
 
     <EditText
         android:id="@+id/phone_edit"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="12sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
+        android:elevation="3dp"
         android:hint="@string/phone_hint"
         android:lines="1"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:text="@string/address"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black" />
+        android:textSize="12sp" />
+
     <EditText
         android:id="@+id/address_edit"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="12sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
+        android:elevation="3dp"
         android:hint="@string/address_hint"
         android:lines="1"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
 
     <include layout="@layout/button_layout" />
 
