--- a/app/src/main/res/layout/acvity_put_in.xml
+++ b/app/src/main/res/layout/acvity_put_in.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/layout_title" />
@@ -12,7 +13,6 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:text="@string/name"
-        android:textColor="@color/txt_black"
         android:textSize="12sp" />
 
     <EditText
@@ -24,20 +24,20 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_shape"
+        android:elevation="3dp"
         android:hint="@string/name_hint"
         android:lines="1"
-        android:paddingBottom="5dp"
+        android:paddingBottom="10dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
-        android:paddingTop="5dp"
-        android:textSize="12sp" />
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:text="@string/phone"
-        android:textColor="@color/txt_black"
         android:textSize="12sp" />
 
     <EditText
@@ -49,13 +49,14 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_shape"
+        android:elevation="3dp"
         android:hint="@string/phone_hint"
         android:lines="1"
-        android:paddingBottom="5dp"
+        android:paddingBottom="10dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
-        android:paddingTop="5dp"
-        android:textSize="12sp" />
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,7 +68,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:text="@string/guanggaoneirong"
-            android:textColor="@color/txt_black"
             android:textSize="12sp" />
 
         <TextView
@@ -83,19 +83,51 @@
         android:id="@+id/guanggao_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_shape"
+        android:elevation="3dp"
         android:gravity="top|left"
         android:hint="@string/guanggaoneirong_hint"
         android:lines="3"
-        android:paddingBottom="5dp"
+        android:paddingBottom="10dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
-        android:paddingTop="5dp"
-        android:textSize="12sp" />
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
 
     <include layout="@layout/button_layout" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/notice"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:textColor="@color/txt_black"
+                android:text="@string/notice_1"
+                android:textSize="10sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:lines="1"
+                android:textColor="#666"
+                android:text="@string/notice_2"
+                android:textSize="10sp" />
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
