--- a/app/src/main/res/layout/open_member.xml
+++ b/app/src/main/res/layout/open_member.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
 
         <RelativeLayout
